--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -19,6 +20,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "leaflet": "^1.9.3",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "postcss": "8.4.21",
@@ -28,6 +30,7 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
